ept reader still returning wrong data

--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -169,51 +169,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 16.8M  100 16.8M    0     0  13.6M      0  0:00:01  0:00:01 --:--:-- 13.6M\n",
-      "Archive:  awscli-bundle.zip\n",
-      "  inflating: awscli-bundle/install   \n",
-      "  inflating: awscli-bundle/packages/rsa-3.4.2.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/docutils-0.15.2.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/futures-3.3.0.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/PyYAML-5.2.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/colorama-0.4.1.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/urllib3-1.25.7.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/six-1.15.0.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/botocore-1.19.57.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/jmespath-0.10.0.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/virtualenv-16.7.8.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/colorama-0.4.3.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/awscli-1.18.217.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/urllib3-1.26.2.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/PyYAML-5.3.1.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/python-dateutil-2.8.0.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/s3transfer-0.3.4.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/pyasn1-0.4.8.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/setup/wheel-0.33.6.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/setup/setuptools_scm-3.3.3.tar.gz  \n",
-      "Running cmd: /opt/conda/bin/python -m venv /home/jovyan/.local/lib/aws\n",
-      "Running cmd: /home/jovyan/.local/lib/aws/bin/pip install --no-binary :all: --no-cache-dir --no-index --find-links file://. setuptools_scm-3.3.3.tar.gz\n",
-      "Running cmd: /home/jovyan/.local/lib/aws/bin/pip install --no-binary :all: --no-cache-dir --no-index --find-links file://. wheel-0.33.6.tar.gz\n",
-      "Running cmd: /home/jovyan/.local/lib/aws/bin/pip install --no-binary :all: --no-build-isolation --no-cache-dir --no-index  --find-links file:///home/jovyan/Allometry/awscli-bundle/packages awscli-1.18.217.tar.gz\n",
-      "You can now run: /home/jovyan/bin/aws --version\n",
-      "\n",
-      "Note: AWS CLI version 2, the latest major version of the AWS CLI, is now stable and recommended for general use. For more information, see the AWS CLI version 2 installation instructions at: https://docs.aws.amazon.com/cli/latest/userguide/install-cliv2.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!curl \"https://s3.amazonaws.com/aws-cli/awscli-bundle.zip\" -o \"awscli-bundle.zip\"\n",
-    "!unzip awscli-bundle.zip \n",
-    "!./awscli-bundle/install -b ~/bin/aws"
+    "#!curl \"https://s3.amazonaws.com/aws-cli/awscli-bundle.zip\" -o \"awscli-bundle.zip\"\n",
+    "#!unzip awscli-bundle.zip \n",
+    "#!./awscli-bundle/install -b ~/bin/aws"
    ]
   },
   {
@@ -227,19 +189,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mkdir: cannot create directory ‘/home/jovyan/tmp’: File exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# make a tmp directory\n",
     "\n",
-    "! mkdir ~/tmp\n",
+    "#! mkdir ~/tmp\n",
     "\n",
     "# make a variable for its path\n",
     "tmp = f'{home}/tmp'\n",
@@ -263,7 +217,7 @@
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args='~/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (5.7 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
+       "CompletedProcess(args='~/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (10.8 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
       ]
      },
      "execution_count": 6,
@@ -288,7 +242,20 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'authority': 'EPSG',\n",
+       " 'horizontal': '3857',\n",
+       " 'wkt': 'PROJCS[\"WGS 84 / Pseudo-Mercator\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Mercator_1SP\"],PARAMETER[\"central_meridian\",0],PARAMETER[\"scale_factor\",1],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"X\",EAST],AXIS[\"Y\",NORTH],EXTENSION[\"PROJ4\",\"+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +wktext +no_defs\"],AUTHORITY[\"EPSG\",\"3857\"]]'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "with open(f'{tmp}/ept.json') as f:\n",
@@ -311,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +337,7 @@
        "-13168196.184677301"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -464,30 +431,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pdal\n",
-      "  Downloading PDAL-2.3.7.tar.gz (945 kB)\n",
-      "\u001b[K     |████████████████████████████████| 945 kB 5.7 MB/s eta 0:00:01\n",
-      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
-      "\u001b[?25hBuilding wheels for collected packages: pdal\n",
-      "  Building wheel for pdal (PEP 517) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pdal: filename=PDAL-2.3.7-cp38-cp38-linux_x86_64.whl size=325272 sha256=118a4c23e85e41b4da8371a0365f7745553de46593ca510b9ecb4dc690f47246\n",
-      "  Stored in directory: /home/jovyan/.cache/pip/wheels/49/48/b4/3f9a021e4d674d9aa44dd61989d53d3add21ad6d69b288235a\n",
-      "Successfully built pdal\n",
-      "Installing collected packages: pdal\n",
-      "Successfully installed pdal-2.3.7\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#pip install pdal"
    ]
@@ -501,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +469,7 @@
      "output_type": "stream",
      "text": [
       "[                                        ] | 0% Completed |  0.3s712181 is a numpy structured array of shape (32,).\n",
-      "[########################################] | 100% Completed |  3.8s\n"
+      "[########################################] | 100% Completed |  4.0s\n"
      ]
     }
    ],
@@ -579,115 +525,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(None,)"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "S"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-13271559, 3934093, -102275, -13064831, 4140821, 104453]"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bounds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mpipeline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m <no docstring>\n",
-       "\u001b[0;31mFile:\u001b[0m      /opt/conda/lib/python3.8/site-packages/pdal/pipeline.py\n",
-       "\u001b[0;31mType:\u001b[0m      method\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'bounds': [-13271559, 3934093, -102275, -13064831, 4140821, 104453],\n",
-       " 'boundsConforming': [-13241541, 3934094, -1179, -13094849, 4140819, 3356],\n",
-       " 'dataType': 'laszip',\n",
-       " 'hierarchyType': 'json',\n",
-       " 'points': 75242414417,\n",
-       " 'schema': [{'name': 'X',\n",
-       "   'offset': -13168195,\n",
-       "   'scale': 0.01,\n",
-       "   'size': 4,\n",
-       "   'type': 'signed'},\n",
-       "  {'name': 'Y', 'offset': 4037456, 'scale': 0.01, 'size': 4, 'type': 'signed'},\n",
-       "  {'name': 'Z', 'offset': 1089, 'scale': 0.01, 'size': 4, 'type': 'signed'},\n",
-       "  {'name': 'Intensity', 'size': 2, 'type': 'unsigned'},\n",
-       "  {'name': 'ReturnNumber', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'NumberOfReturns', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'ScanDirectionFlag', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'EdgeOfFlightLine', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'Classification', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'ScanAngleRank', 'size': 4, 'type': 'float'},\n",
-       "  {'name': 'UserData', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'PointSourceId', 'size': 2, 'type': 'unsigned'},\n",
-       "  {'name': 'GpsTime', 'size': 8, 'type': 'float'},\n",
-       "  {'name': 'ScanChannel', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'ClassFlags', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'OriginId', 'size': 4, 'type': 'unsigned'}],\n",
-       " 'span': 256,\n",
-       " 'srs': {'authority': 'EPSG',\n",
-       "  'horizontal': '3857',\n",
-       "  'wkt': 'PROJCS[\"WGS 84 / Pseudo-Mercator\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Mercator_1SP\"],PARAMETER[\"central_meridian\",0],PARAMETER[\"scale_factor\",1],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"X\",EAST],AXIS[\"Y\",NORTH],EXTENSION[\"PROJ4\",\"+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +wktext +no_defs\"],AUTHORITY[\"EPSG\",\"3857\"]]'},\n",
-       " 'version': '1.0.0'}"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "meta"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -696,31 +533,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-118.38393940968001"
+       "357340   -118.066794\n",
+       "Name: LONGITUDE, dtype: float64"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "id = 1919622\n",
-    "lat = la.loc[la.ID==712126]['LATITUDE'].values[0]\n",
-    "lon = la.loc[la.ID==712126]['LONGITUDE'].values[0]"
+    "id = 1986759\n",
+    "lat = la.loc[la.ID==id]['LATITUDE'].values[0]\n",
+    "lon = la.loc[la.ID==id]['LONGITUDE'].values[0]\n",
+    "lon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-3ea351ea41f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mscaled_bbox\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_scaled_bbox\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbounds_conf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mbbox_geojson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-0cd5cc51e5f8>\u001b[0m in \u001b[0;36mmake_scaled_bbox\u001b[0;34m(lat, lon, bounds)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;31m# make sure no bbox is out of the ept bbox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mxmin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxmin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0mymin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mymin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mxmax\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxmax\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1327\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1328\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1329\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   1330\u001b[0m             \u001b[0;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1331\u001b[0m             \u001b[0;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
+    }
+   ],
    "source": [
     "\n",
     "cmd = f'{aws} s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json {tmp} --no-sign-request'\n",
