--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -217,7 +217,7 @@
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args='~/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (10.8 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
+       "CompletedProcess(args='~/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (10.7 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
       ]
      },
      "execution_count": 6,
@@ -465,11 +465,152 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[                                        ] | 0% Completed |  0.3s712181 is a numpy structured array of shape (32,).\n",
-      "[########################################] | 100% Completed |  4.0s\n"
+     "data": {
+      "text/plain": [
+       "-118.066793605"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id = 1986759\n",
+    "lat = la.loc[la.ID==id]['LATITUDE'].values[0]\n",
+    "lon = la.loc[la.ID==id]['LONGITUDE'].values[0]\n",
+    "lon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "cmd = f'{aws} s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json {tmp} --no-sign-request'\n",
+    "subprocess.run(cmd, shell=True, capture_output=True)\n",
+    "\n",
+    "print('ept.json read from s3 ...')\n",
+    "\n",
+    "with open(f'{tmp}/ept.json') as f:\n",
+    "    meta = json.load(f)\n",
+    "\n",
+    "    \n",
+    "print('metadata bagged ...')\n",
+    "bounds = meta['bounds']\n",
+    "bounds_conf = meta['boundsConforming']\n",
+    "srs = meta['srs']['authority'] + ':' + meta['srs']['horizontal']\n",
+    "\n",
+    "span   = meta['span']\n",
+    "schema  = meta['schema']\n",
+    "\n",
+    "x_scale, x_offset = bag_scale_offset('X', schema)\n",
+    "y_scale, y_offset = bag_scale_offset('Y', schema)\n",
+    "z_scale, z_offset = bag_scale_offset('Z', schema)\n",
+    "\n",
+    "\n",
+    "scaled_bbox = make_scaled_bbox(lat, lon, bounds=bounds_conf)\n",
+    "\n",
+    "def bbox_geojson(lat, lon, filename):\n",
+    "    '''makes wgs84 bbox as geojson for comparison in gis'''\n",
+    "    [xmin, xmax], [ymin, ymax] = make_bbox(lat, lon)\n",
+    "    gjson = {'coordinates' : [[[xmin, ymin], [xmin, ymax], [xmax, ymax], [xmax, ymin]]],\n",
+    "            'type' : 'Polygon'}\n",
+    "    with open(filename, 'w') as of:\n",
+    "        json.dump(gjson, of)\n",
+    "\n",
+    "bbox_geojson(lat, lon, 'xxx.json')        \n",
+    "print('geojson written ...')\n",
+    "\n",
+    "# make and validate pipeline\n",
+    "t = Template('''\n",
+    "{\n",
+    "    \"pipeline\": [\n",
+    "        {\n",
+    "\"bounds\": \"([-10425171.940, -10425171.000], [5164494.710, 5164595.200])\",\n",
+    "\"filename\": \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json\",\n",
+    "\"type\": \"readers.ept\",\n",
+    "\"tag\": \"readdata\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"out_srs\": \"EPSG:4326\",\n",
+    "            \"tag\": \"reprojectwgs84\",\n",
+    "            \"type\": \"filters.reprojection\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"filename\": \"xxx.laz\",\n",
+    "            \"inputs\": [ \"reprojectwgs84\" ],\n",
+    "            \"tag\": \"writerslas\",\n",
+    "            \"type\": \"writers.las\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"filename\": \"xxx.tif\",\n",
+    "            \"gdalopts\": \"tiled=yes,     compress=deflate\",\n",
+    "            \"inputs\": [ \"writerslas\" ],\n",
+    "            \"nodata\": -9999,\n",
+    "            \"output_type\": \"idw\",\n",
+    "            \"resolution\": 1,\n",
+    "            \"type\": \"writers.gdal\",\n",
+    "            \"window_size\": 6\n",
+    "        }\n",
+    "    ]\n",
+    "}''')\n",
+    "\n",
+    "pipe = t.substitute(scaled_bbox=scaled_bbox)\n",
+    "print('pipeline json written ...')\n",
+    "pipeline = pdal.Pipeline(pipe)\n",
+    "print('pipeline string truned into pipeline ...')\n",
+    "pipeline.validate()\n",
+    "print('pipeline validated ...')\n",
+    "\n",
+    " # execuite pipeline\n",
+    "count = pipeline.execute()\n",
+    "print('pipeline executed ...')\n",
+    "S = pipeline.arrays[0]\n",
+    "metadata = pipeline.metadata\n",
+    "log = pipeline.log\n",
+    "\n",
+    "print(S.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaled_bbox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-15-5c063dddf927>, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-5c063dddf927>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    [\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
@@ -523,230 +664,6 @@
     "with ProgressBar():\n",
     "    S = compute(*results)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# IOWA #"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "357340   -118.066794\n",
-       "Name: LONGITUDE, dtype: float64"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "id = 1986759\n",
-    "lat = la.loc[la.ID==id]['LATITUDE'].values[0]\n",
-    "lon = la.loc[la.ID==id]['LONGITUDE'].values[0]\n",
-    "lon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-3ea351ea41f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mscaled_bbox\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_scaled_bbox\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbounds_conf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mbbox_geojson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-11-0cd5cc51e5f8>\u001b[0m in \u001b[0;36mmake_scaled_bbox\u001b[0;34m(lat, lon, bounds)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;31m# make sure no bbox is out of the ept bbox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mxmin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxmin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0mymin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mymin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mxmax\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxmax\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1327\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1328\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1329\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   1330\u001b[0m             \u001b[0;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1331\u001b[0m             \u001b[0;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "cmd = f'{aws} s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json {tmp} --no-sign-request'\n",
-    "subprocess.run(cmd, shell=True, capture_output=True)\n",
-    "\n",
-    "with open(f'{tmp}/ept.json') as f:\n",
-    "    meta = json.load(f)\n",
-    "    \n",
-    "bounds = meta['bounds']\n",
-    "bounds_conf = meta['boundsConforming']\n",
-    "srs = meta['srs']['authority'] + ':' + meta['srs']['horizontal']\n",
-    "\n",
-    "span   = meta['span']\n",
-    "schema  = meta['schema']\n",
-    "\n",
-    "x_scale, x_offset = bag_scale_offset('X', schema)\n",
-    "y_scale, y_offset = bag_scale_offset('Y', schema)\n",
-    "z_scale, z_offset = bag_scale_offset('Z', schema)\n",
-    "\n",
-    "\n",
-    "scaled_bbox = make_scaled_bbox(lat, lon, bounds=bounds_conf)\n",
-    "\n",
-    "def bbox_geojson(lat, lon, filename):\n",
-    "    '''makes wgs84 bbox as geojson for comparison in gis'''\n",
-    "    [xmin, xmax], [ymin, ymax] = make_bbox(lat, lon)\n",
-    "    gjson = {'coordinates' : [[[xmin, ymin], [xmin, ymax], [xmax, ymax], [xmax, ymin]]],\n",
-    "            'type' : 'Polygon'}\n",
-    "    with open(filename, 'w') as of:\n",
-    "        json.dump(gjson, of)\n",
-    "\n",
-    "bbox_geojson(lat, lon, 'xxx.json')        \n",
-    "        \n",
-    "# make and validate pipeline\n",
-    "t = Template('''\n",
-    "{\n",
-    "    \"pipeline\": [\n",
-    "        {\n",
-    "\"bounds\": \"([-10425171.940, -10425171.000], [5164494.710, 5164595.200])\",\n",
-    "\"filename\": \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json\",\n",
-    "\"type\": \"readers.ept\",\n",
-    "\"tag\": \"readdata\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"limits\": \"Classification![7:7]\",\n",
-    "            \"type\": \"filters.range\",\n",
-    "            \"tag\": \"nonoise\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"assignment\": \"Classification[:]=0\",\n",
-    "            \"tag\": \"wipeclasses\",\n",
-    "            \"type\": \"filters.assign\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"out_srs\": \"EPSG:4326\",\n",
-    "            \"tag\": \"reprojectwgs84\",\n",
-    "            \"type\": \"filters.reprojection\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"tag\": \"groundify\",\n",
-    "            \"type\": \"filters.smrf\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"limits\": \"Classification[2:2]\",\n",
-    "            \"type\": \"filters.range\",\n",
-    "            \"tag\": \"classify\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"filename\": \"xxx.laz\",\n",
-    "            \"inputs\": [ \"classify\" ],\n",
-    "            \"tag\": \"writerslas\",\n",
-    "            \"type\": \"writers.las\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"filename\": \"xxx.tif\",\n",
-    "            \"gdalopts\": \"tiled=yes,     compress=deflate\",\n",
-    "            \"inputs\": [ \"writerslas\" ],\n",
-    "            \"nodata\": -9999,\n",
-    "            \"output_type\": \"idw\",\n",
-    "            \"resolution\": 1,\n",
-    "            \"type\": \"writers.gdal\",\n",
-    "            \"window_size\": 6\n",
-    "        }\n",
-    "    ]\n",
-    "}''')\n",
-    "\n",
-    "pipe = t.substitute(scaled_bbox=tbbox)\n",
-    "pipeline = pdal.Pipeline(pipe)\n",
-    "pipeline.validate()\n",
-    "\n",
-    " # execuite pipeline\n",
-    "count = pipeline.execute()\n",
-    "S = pipeline.arrays[0]\n",
-    "metadata = pipeline.metadata\n",
-    "log = pipeline.log\n",
-    "\n",
-    "print(S.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([-13168195.937270697, -13168195.937269298],\n",
-       " [4037456.4158676276, 4037456.4158690274])"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scaled_bbox"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'bounds': [-10758075, 4793202, -361911, -10034133, 5517144, 362031],\n",
-       " 'boundsConforming': [-10758074, 4920531, -1897, -10034134, 5389814, 2017],\n",
-       " 'dataType': 'laszip',\n",
-       " 'hierarchyType': 'json',\n",
-       " 'points': 167692896718,\n",
-       " 'reprojection': {'in': 'EPSG:26915', 'out': 'EPSG:3857'},\n",
-       " 'schema': [{'name': 'X',\n",
-       "   'offset': -10396104,\n",
-       "   'scale': 0.01,\n",
-       "   'size': 4,\n",
-       "   'type': 'signed'},\n",
-       "  {'name': 'Y', 'offset': 5155173, 'scale': 0.01, 'size': 4, 'type': 'signed'},\n",
-       "  {'name': 'Z', 'offset': 60, 'scale': 0.01, 'size': 4, 'type': 'signed'},\n",
-       "  {'name': 'Intensity', 'size': 2, 'type': 'unsigned'},\n",
-       "  {'name': 'ReturnNumber', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'NumberOfReturns', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'ScanDirectionFlag', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'EdgeOfFlightLine', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'Classification', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'ScanAngleRank', 'size': 4, 'type': 'float'},\n",
-       "  {'name': 'UserData', 'size': 1, 'type': 'unsigned'},\n",
-       "  {'name': 'PointSourceId', 'size': 2, 'type': 'unsigned'},\n",
-       "  {'name': 'GpsTime', 'size': 8, 'type': 'float'},\n",
-       "  {'name': 'OriginId', 'size': 4, 'type': 'unsigned'}],\n",
-       " 'srs': {'authority': 'EPSG',\n",
-       "  'horizontal': '3857',\n",
-       "  'wkt': 'PROJCS[\"WGS 84 / Pseudo-Mercator\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Mercator_1SP\"],PARAMETER[\"central_meridian\",0],PARAMETER[\"scale_factor\",1],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"X\",EAST],AXIS[\"Y\",NORTH],EXTENSION[\"PROJ4\",\"+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +wktext +no_defs\"],AUTHORITY[\"EPSG\",\"3857\"]]'},\n",
-       " 'version': '1.0.0',\n",
-       " 'span': 256}"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "meta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
