--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import multiprocessing\n",
     "import pandas as pd\n",
@@ -40,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,33 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 664155 entries, 0 to 1089845\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column        Non-Null Count   Dtype         \n",
-      "---  ------        --------------   -----         \n",
-      " 0   ID            664155 non-null  int64         \n",
-      " 1   LATITUDE      664155 non-null  float64       \n",
-      " 2   LONGITUDE     664155 non-null  float64       \n",
-      " 3   SOURCE        664155 non-null  object        \n",
-      " 4   Name_matched  664155 non-null  object        \n",
-      " 5   Zone          663384 non-null  float64       \n",
-      " 6   dbh_low       664155 non-null  float64       \n",
-      " 7   dbh_high      664155 non-null  float64       \n",
-      " 8   created       28472 non-null   datetime64[ns]\n",
-      " 9   updated       28472 non-null   datetime64[ns]\n",
-      "dtypes: datetime64[ns](2), float64(5), int64(1), object(2)\n",
-      "memory usage: 55.7+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The equations\n",
     "def mcpherson_eqs():\n",
@@ -169,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# make a tmp directory\n",
     "\n",
-    "#! mkdir ~/tmp\n",
+    "!mkdir ~/tmp\n",
     "\n",
     "# make a variable for its path\n",
     "tmp = f'{home}/tmp'\n",
@@ -211,20 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args='~/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (10.7 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess\n",
     "cmd = f'{aws} s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json {tmp} --no-sign-request'\n",
@@ -240,22 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'authority': 'EPSG',\n",
-       " 'horizontal': '3857',\n",
-       " 'wkt': 'PROJCS[\"WGS 84 / Pseudo-Mercator\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Mercator_1SP\"],PARAMETER[\"central_meridian\",0],PARAMETER[\"scale_factor\",1],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"X\",EAST],AXIS[\"Y\",NORTH],EXTENSION[\"PROJ4\",\"+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +wktext +no_defs\"],AUTHORITY[\"EPSG\",\"3857\"]]'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "with open(f'{tmp}/ept.json') as f:\n",
@@ -278,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,37 +261,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1.18467730111\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-13168196.184677301"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lon_min = -118.467730111\n",
-    "scaled = lon_min * x_scale\n",
-    "print(scaled)\n",
-    "sc_off = scaled + x_offset\n",
-    "sc_off"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -359,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,40 +308,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will performa quick sanity check using the first entry of the LA data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "([-13168196.184677301, -13168196.18291042], [4037456.3401063564, 4037456.3406509194])\n"
-     ]
-    }
-   ],
-   "source": [
-    "minx = -118.467730111\n",
-    "miny = 34.010635655\n",
-    "maxx = -118.467445511\n",
-    "maxy = 34.010856703\n",
-    "minx, miny = rescale(minx, miny)\n",
-    "maxx, maxy = rescale(-118.291042065, 34.065091929)\n",
-    "temp_box = ([minx, maxx], [miny, maxy])\n",
-    "print(temp_box)\n",
-    "tbbox = ([-13168200.284677301, -13168197.28291042], [4037456.3401063564, 4037459.3406509194])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,20 +339,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-118.066793605"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "id = 1986759\n",
     "lat = la.loc[la.ID==id]['LATITUDE'].values[0]\n",
@@ -488,28 +355,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "cmd = f'{aws} s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json {tmp} --no-sign-request'\n",
-    "subprocess.run(cmd, shell=True, capture_output=True)\n",
-    "\n",
-    "print('ept.json read from s3 ...')\n",
-    "\n",
     "with open(f'{tmp}/ept.json') as f:\n",
     "    meta = json.load(f)\n",
-    "\n",
-    "    \n",
-    "print('metadata bagged ...')\n",
-    "bounds = meta['bounds']\n",
-    "bounds_conf = meta['boundsConforming']\n",
-    "srs = meta['srs']['authority'] + ':' + meta['srs']['horizontal']\n",
-    "\n",
-    "span   = meta['span']\n",
-    "schema  = meta['schema']\n",
-    "\n",
-    "x_scale, x_offset = bag_scale_offset('X', schema)\n",
-    "y_scale, y_offset = bag_scale_offset('Y', schema)\n",
-    "z_scale, z_offset = bag_scale_offset('Z', schema)\n",
-    "\n",
     "\n",
     "scaled_bbox = make_scaled_bbox(lat, lon, bounds=bounds_conf)\n",
     "\n",
@@ -529,31 +376,27 @@
     "{\n",
     "    \"pipeline\": [\n",
     "        {\n",
-    "\"bounds\": \"([-10425171.940, -10425171.000], [5164494.710, 5164595.200])\",\n",
-    "\"filename\": \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json\",\n",
-    "\"type\": \"readers.ept\",\n",
-    "\"tag\": \"readdata\"\n",
+    "        \"bounds\": \"([-10425171.940, -10425171.000], [5164494.710, 5164595.200])\",\n",
+    "        \"filename\": \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json\",\n",
+    "        \"type\": \"readers.ept\",\n",
+    "        \"tag\": \"readdata\"\n",
     "        },\n",
     "        {\n",
-    "            \"out_srs\": \"EPSG:4326\",\n",
-    "            \"tag\": \"reprojectwgs84\",\n",
-    "            \"type\": \"filters.reprojection\"\n",
+    "        \"out_srs\": \"EPSG:4326\",\n",
+    "        \"type\": \"filters.reprojection\"\n",
     "        },\n",
     "        {\n",
-    "            \"filename\": \"xxx.laz\",\n",
-    "            \"inputs\": [ \"reprojectwgs84\" ],\n",
-    "            \"tag\": \"writerslas\",\n",
-    "            \"type\": \"writers.las\"\n",
+    "        \"filename\": \"xxx.laz\",\n",
+    "        \"type\": \"writers.las\"\n",
     "        },\n",
     "        {\n",
-    "            \"filename\": \"xxx.tif\",\n",
-    "            \"gdalopts\": \"tiled=yes,     compress=deflate\",\n",
-    "            \"inputs\": [ \"writerslas\" ],\n",
-    "            \"nodata\": -9999,\n",
-    "            \"output_type\": \"idw\",\n",
-    "            \"resolution\": 1,\n",
-    "            \"type\": \"writers.gdal\",\n",
-    "            \"window_size\": 6\n",
+    "        \"filename\": \"xxx.tif\",\n",
+    "        \"gdalopts\": \"tiled=yes,     compress=deflate\",\n",
+    "        \"nodata\": -9999,\n",
+    "        \"output_type\": \"idw\",\n",
+    "        \"resolution\": 1,\n",
+    "        \"type\": \"writers.gdal\",\n",
+    "        \"window_size\": 6\n",
     "        }\n",
     "    ]\n",
     "}''')\n",
@@ -561,7 +404,7 @@
     "pipe = t.substitute(scaled_bbox=scaled_bbox)\n",
     "print('pipeline json written ...')\n",
     "pipeline = pdal.Pipeline(pipe)\n",
-    "print('pipeline string truned into pipeline ...')\n",
+    "print('pipeline string turned into pipeline ...')\n",
     "pipeline.validate()\n",
     "print('pipeline validated ...')\n",
     "\n",
