tryingt solve the scale/offest issue

--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "16"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -219,16 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args='~/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (9.8 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
+       "CompletedProcess(args='~/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (9.2 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        " 'wkt': 'PROJCS[\"WGS 84 / Pseudo-Mercator\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Mercator_1SP\"],PARAMETER[\"central_meridian\",0],PARAMETER[\"scale_factor\",1],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"X\",EAST],AXIS[\"Y\",NORTH],EXTENSION[\"PROJ4\",\"+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +wktext +no_defs\"],AUTHORITY[\"EPSG\",\"3857\"]]'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,6 +274,8 @@
     "srs    = meta['srs']\n",
     "span   = meta['span']\n",
     "schema  = meta['schema']\n",
+    "dataType = meta['dataType']\n",
+    "hierarchyType = meta['hierarchyType'] \n",
     "srs"
    ]
   },
@@ -286,11 +288,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataType is: laszip\n",
+      "hierarchyType is: json\n"
+     ]
+    }
+   ],
    "source": [
-    "srs = meta['srs']['authority'] + ':' + meta['srs']['horizontal']"
+    "srs = meta['srs']['authority'] + ':' + meta['srs']['horizontal']\n",
+    "\n",
+    "#print more info\n",
+    "print(f'dataType is: {dataType}\\nhierarchyType is: {hierarchyType}')"
    ]
   },
   {
@@ -302,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +331,7 @@
     "z_scale, z_offset = bag_scale_offset('Z', schema)\n",
     "\n",
     "def rescale(lon, lat, elev=None):\n",
-    "    '''Returns point rescaled to the ept coords'''\n",
+    "    '''Returns point rescaled to the ept coords , from EPSG:3857'''\n",
     "    x = lon * x_scale + x_offset\n",
     "    y = lat * y_scale + y_offset\n",
     "    if elev:\n",
@@ -336,27 +350,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-13271559, 3934093, -102275, -13064831, 4140821, 104453]"
+       "[{'name': 'X',\n",
+       "  'offset': -13168195,\n",
+       "  'scale': 0.01,\n",
+       "  'size': 4,\n",
+       "  'type': 'signed'},\n",
+       " {'name': 'Y', 'offset': 4037456, 'scale': 0.01, 'size': 4, 'type': 'signed'},\n",
+       " {'name': 'Z', 'offset': 1089, 'scale': 0.01, 'size': 4, 'type': 'signed'},\n",
+       " {'name': 'Intensity', 'size': 2, 'type': 'unsigned'},\n",
+       " {'name': 'ReturnNumber', 'size': 1, 'type': 'unsigned'},\n",
+       " {'name': 'NumberOfReturns', 'size': 1, 'type': 'unsigned'},\n",
+       " {'name': 'ScanDirectionFlag', 'size': 1, 'type': 'unsigned'},\n",
+       " {'name': 'EdgeOfFlightLine', 'size': 1, 'type': 'unsigned'},\n",
+       " {'name': 'Classification', 'size': 1, 'type': 'unsigned'},\n",
+       " {'name': 'ScanAngleRank', 'size': 4, 'type': 'float'},\n",
+       " {'name': 'UserData', 'size': 1, 'type': 'unsigned'},\n",
+       " {'name': 'PointSourceId', 'size': 2, 'type': 'unsigned'},\n",
+       " {'name': 'GpsTime', 'size': 8, 'type': 'float'},\n",
+       " {'name': 'ScanChannel', 'size': 1, 'type': 'unsigned'},\n",
+       " {'name': 'ClassFlags', 'size': 1, 'type': 'unsigned'},\n",
+       " {'name': 'OriginId', 'size': 4, 'type': 'unsigned'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bounds"
+    "schema"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,16 +493,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([-118.066863605, -118.066723605], [33.826110567, 33.826250567])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bbox = make_bbox(lat, lon)"
+    "bbox = make_bbox(lat, lon)\n",
+    "bbox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +533,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-13271559, 3934093, -102275, -13064831, 4140821, 104453]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'EPSG:3857'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "srs\n",
+    "# EPSG:26911\n",
+    "\n",
+    "# 129.65.136.99 \n",
+    "#CALPOLY\\africker "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +595,7 @@
     "        {\n",
     "        \"type\": \"filters.reprojection\",\n",
     "        \"in_srs\":\"${srs}\",\n",
-    "        \"out_srs\": \"EPSG:4326\"\n",
+    "        \"out_srs\": \"EPSG:26911\"\n",
     "        },\n",
     "        {\n",
     "        \"filename\": \"xxx.laz\",\n",
@@ -530,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +637,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
