yes! ept reader is working!

--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -225,7 +225,7 @@
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args='~/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (9.2 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
+       "CompletedProcess(args='~/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (8.5 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
       ]
      },
      "execution_count": 6,
@@ -415,8 +415,8 @@
     "    ymax, xmax, zmax = transform.TransformPoint(ymax, xmax)\n",
     "    \n",
     "    # now rescale using the scale and offest from the ept.json\n",
-    "    xmin, ymin = rescale(xmin, ymin)\n",
-    "    xmax, ymax = rescale(xmax, ymax)\n",
+    "    #xmin, ymin = rescale(xmin, ymin)\n",
+    "    #xmax, ymax = rescale(xmax, ymax)\n",
     "\n",
     "    # make sure no bbox is out of the ept bbox, for edge cases\n",
     "    #if bounds:  \n",
@@ -482,93 +482,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the lat, lon of point from dataset\n",
     "id = 1986759\n",
     "lat = la.loc[la.ID==id]['LATITUDE'].values[0]\n",
-    "lon = la.loc[la.ID==id]['LONGITUDE'].values[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([-118.066863605, -118.066723605], [33.826110567, 33.826250567])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "lon = la.loc[la.ID==id]['LONGITUDE'].values[0]\n",
+    "\n",
+    "# make the bbox in EPSG:4326\n",
     "bbox = make_bbox(lat, lon)\n",
-    "bbox"
+    "# get bbox coords in EPSG:4326 to transform\n",
+    "[xmin, xmax], [ymin, ymax] = make_bbox(lat, lon)\n",
+    "\n",
+    "# make geojson of bbox in EPSG:4326\n",
+    "bbox_geojson(lat, lon, 'box_4326.json')\n",
+    "\n",
+    "# define transform from EPSG:4326 to EPSG:3857\n",
+    "old_crs = osr.SpatialReference() \n",
+    "old_crs.ImportFromEPSG(4326) \n",
+    "new_crs = osr.SpatialReference() \n",
+    "new_crs.ImportFromEPSG(3857)\n",
+    "transform = osr.CoordinateTransformation(old_crs,new_crs)\n",
+    "\n",
+    "# transform bbox points\n",
+    "xmin, ymin, zmin = transform.TransformPoint(ymin, xmin)\n",
+    "xmax, ymax, zmax = transform.TransformPoint(ymax, xmax)\n",
+    "\n",
+    "# now rescale using the scale and offest from the ept.json\n",
+    "#xmin, ymin = rescale(xmin, ymin)\n",
+    "#xmax, ymax = rescale(xmax, ymax)\n",
+    "\n",
+    "scaled_bbox = ([xmin, xmax],[ymin, ymax])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "([-13128140.232456215, -13128140.044853443], [3906024.568639325, 3906024.7244866122]) \n",
-      " [-13271559, 3934093, -102275, -13064831, 4140821, 104453]\n"
-     ]
-    }
-   ],
-   "source": [
-    "scaled_bbox = make_scaled_bbox(lat, lon, bounds=bounds)\n",
-    "print(scaled_bbox,'\\n', bounds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-13271559, 3934093, -102275, -13064831, 4140821, 104453]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bounds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'EPSG:3857'"
+       "(20037508.342789244, 5621521.486192066, 0.0)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "srs\n",
+    "transform.TransformPoint(45.0, 180.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([-13143143.136067484, -13143127.551338773],\n",
+       " [4005476.7543784794, 4005495.514655751])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled_bbox\n",
     "# EPSG:26911\n",
     "\n",
     "# 129.65.136.99 \n",
@@ -577,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,23 +590,22 @@
     "        },\n",
     "        {\n",
     "        \"filename\": \"xxx.tif\",\n",
-    "        \"bounds\": \"${scaled_bbox}\",\n",
     "        \"gdalopts\": \"tiled=yes,     compress=deflate\",\n",
     "        \"nodata\": -9999,\n",
     "        \"output_type\": \"idw\",\n",
-    "        \"resolution\": 10,\n",
+    "        \"resolution\": 1,\n",
     "        \"type\": \"writers.gdal\",\n",
     "        \"window_size\": 6\n",
     "        }\n",
     "    ]\n",
     "}''')\n",
     "\n",
-    "pipe = t.substitute(scaled_bbox=scaled_bbox, srs=srs)"
+    "pipe = t.substitute(scaled_bbox=scaled_bbox, srs=srs, bbox=bbox)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +623,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,9 +643,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "544"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "count"
    ]
