making vrt in added santa_monica_tiler

--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -59,10 +59,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# path to file\n",
     "home = os.path.expanduser('~')\n",
@@ -402,6 +400,15 @@
     "            'type' : 'Polygon'}\n",
     "    with open(filename, 'w') as of:\n",
     "        json.dump(gjson, of)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "had to run \n",
+    "```conda update numpy```\n",
+    "in terminal first"
    ]
   },
   {
@@ -1009,6 +1016,113 @@
    "outputs": [],
    "source": [
     "S[4].plot.scatter(x='r', y='HeightAboveGround');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mgdal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBuildVRT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdestName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msrcDSOrSrcDSTab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Build a VRT from a list of datasets.\n",
+       "Arguments are :\n",
+       "  destName --- Output dataset name\n",
+       "  srcDSOrSrcDSTab --- an array of Dataset objects or filenames, or a Dataset object or a filename\n",
+       "Keyword arguments are :\n",
+       "  options --- return of gdal.BuildVRTOptions(), string or array of strings\n",
+       "  other keywords arguments of gdal.BuildVRTOptions()\n",
+       "If options is provided as a gdal.BuildVRTOptions() object, other keywords are ignored. \n",
+       "\u001b[0;31mFile:\u001b[0m      /opt/conda/lib/python3.8/site-packages/osgeo/gdal.py\n",
+       "\u001b[0;31mType:\u001b[0m      function\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "?gdal.BuildVRT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['chm40.tif',\n",
+       " 'chm50.tif',\n",
+       " 'chm79.tif',\n",
+       " 'chm90.tif',\n",
+       " 'chm74.tif',\n",
+       " 'chm84.tif',\n",
+       " 'chm88.tif',\n",
+       " '.ipynb_checkpoints']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.listdir(tmp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'acbsb.fork'.endswith('.fork')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/jovyan/tmp'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp"
    ]
   },
   {
